--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "install-server": "npm install --prefix server",
     "install-client": "npm install --prefix client",
+    "install": "npm install --prefix client && npm install --prefix server",
     "server": "npm run watch --prefix server",
     "client": "npm start --prefix client",
     "watch": "npm run server & npm run client",
