--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "install-server": "npm install --prefix server",
     "install-client": "npm install --prefix client",
-    "install": "npm install --cwd client && npm install --cwd server",
+    "install": "npm install C:/Users/admin/Desktop/node.js/NASA-Project/client && npm install C:/Users/admin/Desktop/node.js/NASA-Project/server",
     "server": "npm run watch --prefix server",
     "client": "npm start --prefix client",
     "watch": "npm run server & npm run client",
