--- a/package.json
+++ b/package.json
@@ -12,14 +12,10 @@
     "watch": "npm run server & npm run client",
     "deploy": "npm run build --prefix client && npm start --prefix server",
     "deploy-cluster": "npm run build --prefix client && npm run cluster --prefix server",
-    "test": "npm run test --prefix server && npm test --prefix client"
+    "test": "npm test --prefix server && npm test --prefix client"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^1.2.6",
-    "latest-version": "^7.0.0",
-    "morgan": "^1.10.0"
-  }
+  "license": "ISC"
+
 }
